# ChangeLog for media-libs/libid3tag
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libid3tag/ChangeLog,v 1.44 2012/05/09 16:20:13 aballier Exp $

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  keyword ~amd64-fbsd

  26 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  Move gperf to DEPEND only wrt #352840 by Mr. Bones. USE="static-libs" and
  punt useless libtool archive.

  28 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  mark ~x86-freebsd

  20 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  files/0.15.1b/libid3tag-0.15.1b-utf16.patchlibid3tag-0.15.1b-utf16.patch:
  Do not use absolute paths in patch #237667.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/0.15.1b/libid3tag-0.15.1b-a_capella.patch:
  Fix patch with absolute paths.

  07 May 2008; Markus Rothe <corsair@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  Stable on ppc64; bug #210564

  06 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  ppc stable, bug #210564

  06 May 2008; Raúl Porcel <armin76@gentoo.org>
  libid3tag-0.15.1b-r2.ebuild:
  alpha/ia64/sparc stable wrt #210564

  05 May 2008; Markus Meier <maekke@gentoo.org> libid3tag-0.15.1b-r2.ebuild:
  amd64/x86 stable, security bug #210564

  05 May 2008; Jeroen Roovers <jer@gentoo.org> libid3tag-0.15.1b-r2.ebuild:
  Stable for HPPA (bug #210564).

*libid3tag-0.15.1b-r2 (05 May 2008)

  05 May 2008; Olivier Crête <tester@gentoo.org>
  -libid3tag-0.15.1b-r1.ebuild, +libid3tag-0.15.1b-r2.ebuild:
  Bump revision to make sure everyone get the latest patch

  05 May 2008; Olivier Crête <tester@gentoo.org>
  +files/0.15.1b/libid3tag-0.15.1b-fix_overflow.patch:
  Really add patch for bug #210564

  05 May 2008; Robert Buchholz <rbu@gentoo.org> libid3tag-0.15.1b-r1.ebuild: