@@ -11,13 +11,13 @@ AUX 0.15.1b/libid3tag-0.15.1b-unknown-encoding.patch 879 RMD160 c4b4ac0a7d013fe0
 AUX 0.15.1b/libid3tag-0.15.1b-utf16.patchlibid3tag-0.15.1b-utf16.patch 583 RMD160 1232e4208b883575f6faabc6f11831264e8af0c9 SHA1 daf621e8123530fdab5193099031074666fc7330 SHA256 487d0c531f3653f8e754d720729cf1cec1bce6e897b845fa61adaaf2668d1568
 AUX id3tag.pc 222 RMD160 fae7791cbdf0d5e4d86a3bb06dcfdcfaa164b859 SHA1 9708c6ec9a571d2e8d926c360c075e81a7c65e54 SHA256 86c6e517864243daffadbd5fa5bd4a9e0c10535f1d1894903dd66c87b8bf594f
 DIST libid3tag-0.15.1b.tar.gz 338143 RMD160 31a69b8ad7684aefdb675acc8ebf89bd6f432095 SHA1 4d867e8a8436e73cd7762fe0e85958e35f1e4306 SHA256 63da4f6e7997278f8a3fef4c6a372d342f705051d1eeb6a46a86b03610e26151
-EBUILD libid3tag-0.15.1b-r2.ebuild 1328 RMD160 68c5078a14c9a40b03837a4ac0581689d3f07aff SHA1 c6fad4d6cf49e596cb9237500398fb9690a875e8 SHA256 b4c3f997a80b5c7f189094d99b2f34794c8accf6741ca86380a93119d3226f5c
-MISC ChangeLog 6010 RMD160 874cf9c8e12e52a054aed6048338e94c715c642d SHA1 bb7134e628e810bdb8406471c2afe2c72ba37890 SHA256 a79f975cc4ca13e167ab4190cd98ecf724fa22715f422fb692c626148cee2dd8
+EBUILD libid3tag-0.15.1b-r2.ebuild 1443 RMD160 a6bcba035c304224f1153b5e8d95f0dcf24135a1 SHA1 84eaa7b63d1757ed1ca35a3bf97b354458bd93cc SHA256 ec96afe31f3f71918c9fbca200ed2cf13894c706442e126bb1a9ebd36c087f48
+MISC ChangeLog 6130 RMD160 6f6821ec22e0de7e97c1a19e86d1ee89be48ba59 SHA1 3574cc2fb58260f104d985138d1667e16581af57 SHA256 9adfa57b2824d42abc0c090edb8a2230b080177415113cfef9bc44f2bb3fe7dd
 MISC metadata.xml 248 RMD160 05122080e3580393675ec87101f0eb48aba15ea5 SHA1 8f9b5d80a666c1f111e7a6e61c66a298ed67a408 SHA256 790cfd8d63ed9248363a7e773fd9bdad79266c4153368dceb5109a63b2a2aa8f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+3vtMACgkQX3X2B8XHTom24ACfcTtYVxS3R4yMAHpydJeSggwy
-GzsAni1mz5U4FDZlpzciIl5ljntU5APg
-=3Cr3
+iEYEARECAAYFAk/CCxAACgkQX3X2B8XHTolW1gCfSFlJBx/nAitGKTFDT3P6TqK9
+j1QAoIjY9IEdyTBxXmFzZKcruzhMPpw0
+=DkzA
 -----END PGP SIGNATURE-----
