@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libid3tag
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libid3tag/ChangeLog,v 1.44 2012/05/09 16:20:13 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libid3tag/ChangeLog,v 1.45 2012/05/17 14:50:26 aballier Exp $
+
+  17 May 2012; Alexis Ballier <aballier@gentoo.org>
+  libid3tag-0.15.1b-r2.ebuild:
+  elibtoolize it (required on fbsd)
 
   09 May 2012; Alexis Ballier <aballier@gentoo.org>
   libid3tag-0.15.1b-r2.ebuild:
